--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Westynck/Mushrooms.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Westynck/Mushrooms/issues"
+  },
+  "homepage": "https://github.com/Westynck/Mushrooms#readme",
+  "description": ""
 }
